# holochain-client-js

./: .eslintrc.cjs  .eslintrc.js  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  api-extractor.json  build-fixture.sh  config.nix  default.nix  dna-util  doc-test-app-ws.sh  doc-test-app-ws.ts  doc-test-signal.sh  doc-test-signal.ts  eslint.config.cjs  flake.nix  holochain-client-0.16.2.tgz  install-holochain.sh  package-lock.json  package.json  run-test.sh  tryout.ts  tsconfig.build.json  tsconfig.es.json  tsconfig.json  vitest.config.ts
.circleci/: config.yml
.github/: CODEOWNERS  nix.conf  pull_request_template.md
docs/: API.md  API_adminwebsocket.md  API_appagentwebsocket.md  API_appwebsocket.md  API_wsclient.md  client._kp.md  client.abandoncountersigningsessionstaterequest.md  client.abandoncountersigningsessionstateresponse.md  client.action.data.md  client.action.header.md  client.action.md  client.actionbase.md  client.actiondata.md  client.actionhash.md  client.actionhashandsig.md  client.actionhashb64.md  client.actionhashb64map.md  client.actionhashed.md  client.actionhashmap.md  client.actionheader.action_seq.md  client.actionheader.author.md  client.actionheader.md  client.actionheader.prev_action.md  client.actionheader.timestamp.md  client.actiontype.md  client.addagentinforequest.md  client.addagentinforesponse.md  client.adminapi.addagentinfo.md  client.adminapi.agentinfo.md  client.adminapi.attachappinterface.md  client.adminapi.deleteclonecell.md  client.adminapi.disableapp.md  client.adminapi.dumpfullstate.md  client.adminapi.dumpnetworkstats.md  client.adminapi.dumpstate.md  client.adminapi.enableapp.md  client.adminapi.generateagentpubkey.md  client.adminapi.getdnadefinition.md  client.adminapi.grantzomecallcapability.md  client.adminapi.installapp.md  (+893 more)
newdocs/: client.action.md  client.actionbase.md  client.actionhashb64.md  client.adminapi.addagentinfo.md  client.adminapi.dumpstate.md  client.adminapi.registerdna.md  client.adminwebsocket._requester.md  client.adminwebsocket.generateagentpubkey.md  client.adminwebsocket.grantzomecallcapability.md  client.adminwebsocket.listdnas.md  client.agentpubkey.md  client.appagentevents.md  (+84 more)
test/e2e/fixture/zomes/foo/: .rustc_info.json  Cargo.toml
test/e2e/fixture/zomes/foo/src/: lib.rs
test/e2e/fixture/zomes/integrity/foo/: Cargo.toml
test/e2e/fixture/zomes/integrity/foo/src/: lib.rs
(+102 files in other folders)
