[workspace]
members = [
    "test/e2e/fixture/zomes/coordinator/foo",
    "test/e2e/fixture/zomes/integrity/foo",
    "test/e2e/fixture2/coordinator2",
]

resolver = "2"

[profile.dev]
opt-level = "z"

[workspace.dependencies]
hdi = "0.8.0-dev.4"
hdk = "0.7.0-dev.6"
holochain_serialized_bytes = "0.0.56"

test_wasm_foo_integrity = { path = "test/e2e/fixture/zomes/integrity/foo" }
