[package]
name = "test_wasm_foo"
version = "0.0.1"
authors = [ "thedavidmeister", "thedavidmeister@gmail.com" ]
edition = "2018"

[lib]
name = "test_wasm_foo"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
serde = "=1.0.123"
hdk = { git = "https://github.com/holochain/holochain", rev = "c6e501eceae06f381c80ed50ea7bb971f8d1edcc" }
