[package]
name = "test_wasm_foo"
version = "0.0.1"
authors = [ "thedavidmeister", "thedavidmeister@gmail.com" ]
edition = "2018"

[lib]
name = "test_wasm_foo"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
serde = "=1.0.123"
hdk = {git ="https://github.com/holochain/holochain", rev = "1eb5b70f64b2188e6ef0c876367838b8a6a2015d", package = "hdk"}
