[package]
name = "test_wasm_foo"
version = "0.0.1"
authors = [ "thedavidmeister", "thedavidmeister@gmail.com" ]
edition = "2018"

[lib]
name = "test_wasm_foo"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
serde = "=1.0.123"
hdk = {git ="https://github.com/holochain/holochain", rev = "c5dbdf28825927106bc32d186dd54f20d35df468", package = "hdk"}
